feat: done realtime when shared video for other logged in and online, setup kafka and websocket server
